# libg710p

./: .gitignore  Makefile.am  README  configure.ac
data/: 95-libg710p.rules  Makefile.am
libg710p/: Makefile.am  g710p.c  g710p.h  libg710p-hidraw.pc.in  libg710p-libusb.pc.in
tools/: Makefile.am  g710p-keys.c  g710p-pulseaudio.c  g710p-tools-common.c  g710p-tools-common.h
